@@ -104,14 +104,6 @@ BindGlobal( "TheTypeOfDocumentationTreeExampleNodes",
         NewType( TheFamilyOfDocumentationTreeNodes,
                 IsTreeForDocumentationExampleNodeRep ) );
 
-DeclareRepresentation( "IsTreeForDocumentationCodeNodeRep",
-                       IsTreeForDocumentationNodeRep,
-                       [ ] );
-
-BindGlobal( "TheTypeOfDocumentationTreeCodeNodes",
-        NewType( TheFamilyOfDocumentationTreeNodes,
-                IsTreeForDocumentationCodeNodeRep ) );
-
 ###################################
 ##
 ## Tools
@@ -235,27 +227,6 @@ InstallMethod( DocumentationChunk, [ IsTreeForDocumentation, IsString ],
     ObjectifyWithAttributes( node, TheTypeOfDocumentationTreeChunkNodes,
                               Label, name );
     tree!.chunks.( name ) := node;
-    return node;
-end );
-
-##
-InstallMethod( DocumentationCode, [ IsTreeForDocumentation, IsString ],
-  function( tree, name )
-    local node;
-    
-    name := Concatenation( "System_", name );
-    
-    node := rec( content := [ ],
-                 level := tree!.current_level );
-    
-    ObjectifyWithAttributes( node, TheTypeOfDocumentationTreeCodeNodes,
-                             Label, name );
-    
-    if IsBound( tree!.nodes_by_label.( name ) ) then
-        Add( tree!.nodes_by_label.( name )!.content, node );
-    fi;
-    
-    tree!.nodes_by_label.( name ) := node;
     return node;
 end );
 
@@ -656,26 +627,4 @@ InstallMethod( WriteDocumentation, [ IsTreeForDocumentationExampleNodeRep, IsStr
         AppendTo( filestream, i, "\n" );
     od;
     AppendTo( filestream, "]]></", inserted_string, ">\n\n" );
-end );
-
-##
-InstallMethod( WriteDocumentation, [ IsTreeForDocumentationCodeNodeRep, IsStream, IsInt ],
-  function( node, filestream, level_value )
-    local content, i;
-    
-    if node!.level > level_value then
-        return;
-    fi;
-    
-    content := node!.content;
-    
-    if content = [ ] then
-        return;
-    fi;
-    
-    AppendTo( filestream, "<Listing Type=\"Code\"><![CDATA[\n" );
-    for i in content do
-        AppendTo( filestream, i, "\n" );
-    od;
-    AppendTo( filestream, "]]></Listing>\n" );
 end );
